--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas==1.5.3
 pyngrok==6.0.0
-sklearn==0.0.post5
+scikit_learn==1.2.2
 streamlit==1.23.1
-streamlit-option-menu==0.3.6
+streamlit_option_menu==0.3.6
